# vmn-cpp

./: CMakeLists.txt  README.md  main.cpp  ver_template_test.j2  vmn-cpp-stamp.py
.vmn/cpp_app_demo/: last_known_app_version.yml
